--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,16 @@
         android:theme="@style/WhiteTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup,android:usesCleartextTraffic">
-        <activity android:name=".activity.activitiesnew.loadmcash.CoinbaseActivity"
+        <activity android:name=".activity.activitiesnew.TransferVcashActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/Splash.Theme"></activity>
+        <activity
+            android:name=".activity.activitiesnew.loadmcash.CoinbaseActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Splash.Theme"
-            tools:ignore="LockedOrientationActivity"></activity>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activity.activitiesnew.conversion.ConversionOtpActivity"
             android:launchMode="singleTop"
