--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,28 +129,24 @@
         <activity
             android:name=".newregistration.OnboardingActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/Splash.Theme" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".newregistration.Register4Activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/Splash.Theme" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".newregistration.Register3Activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/Splash.Theme" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".newregistration.Register2Activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/Splash.Theme" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".newregistration.Register1Activity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash.Theme" />
+            />
         <activity
             android:name=".activity.activities.ConversionActivity"
             android:launchMode="singleTop"
