--- a/gradle.properties
+++ b/gradle.properties
@@ -18,17 +18,17 @@ phone="phone"
 userData="userData"
 email="email"
 
-#appBaseUrl="https://vynkpay.app/api/"
-#baseUrl="https://vynkpay.app/"
-#imageBaseUrl="https://vynkpay.app/"
-#webUrl="https://vynkpay.app/"
+appBaseUrl="https://vynkpay.app/api/"
+baseUrl="https://vynkpay.app/"
+imageBaseUrl="https://vynkpay.app/"
+webUrl="https://vynkpay.app/"
 
-appBaseUrl="https://www.mlm.pixelsoftwares.com/vynkpay/api/"
-baseUrl="https://www.mlm.pixelsoftwares.com/vynkpay/"
-imageBaseUrl="https://www.mlm.pixelsoftwares.com/esampark/services/"
-webUrl="https://www.mlm.pixelsoftwares.com/esampark/"
+#appBaseUrl="https://www.mlm.pixelsoftwares.com/vynkpay/api/"
+#baseUrl="https://www.mlm.pixelsoftwares.com/vynkpay/"
+#imageBaseUrl="https://www.mlm.pixelsoftwares.com/esampark/services/"
+#webUrl="https://www.mlm.pixelsoftwares.com/esampark/"
 
-appmode="debug"
+appmode="live"
 
 addMoneyURL="payumoney/checkout"
 payUSuccessFinal="payumoney/final"
