--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-repositories {
+/*repositories {
     maven {
         url "https://highsoft.bintray.com/Highcharts"
     }
-}
+}*/
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -120,7 +120,7 @@ dependencies {
     implementation 'com.mindorks.android:prdownloader:0.6.0'
     implementation 'com.itextpdf:itextpdf:5.0.6'
     implementation 'com.google.firebase:firebase-dynamic-links:19.1.1'
-    implementation 'com.highsoft.highcharts:highcharts:8.1.2'
+   // implementation 'com.highsoft.highcharts:highcharts:8.1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.appersiano:imageprogressview:-SNAPSHOT'
    // implementation 'com.google.firebase:firebase-analytics:17.5.0'
